--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>WT Data Project</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GL3Z8BJG5V"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKCBYJJ8DB"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-GL3Z8BJG5V');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-MKCBYJJ8DB');
     </script>
 </head>
 <body>
