add cloudflare analytics

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         gtag('js', new Date());
         gtag('config', 'G-MKCBYJJ8DB');
     </script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ba266901949a43388e3e08ffc263df47"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 <body>
     <ul id="navbar"></ul>
