--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="A web based War Thunder statistics data visualization.">
+    <meta name="keywords" content="War Thunder,WT Data Project,War Thunder Data Project">
+    <meta name="author" content="ControlNet">
     <title>WT Data Project</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
