--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="War Thunder,WT Data Project,War Thunder Data Project">
     <meta name="author" content="ControlNet">
     <title>WT Data Project</title>
+    <link rel="icon" href="/img/logo.ico">
     <link rel="stylesheet" type="text/css" href="index.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKCBYJJ8DB"></script>
