--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div id="sidebar"></div>
         <div id="content"></div>
     </div>
+    <img src="https://count.getloli.com/get/@wt-data-project?theme=rule34" alt="" style="display: none">
 </body>
 <script src="dist/bundle.js"></script>
 </html>
