--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/log/logo64.png">
+    <meta name="description" content="A web based War Thunder statistics data visualization.">
+    <meta name="keywords" content="War Thunder,WT Data Project,War Thunder Data Project">
+    <meta name="author" content="ControlNet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/logo/logo64.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKCBYJJ8DB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-MKCBYJJ8DB');
+    </script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "ba266901949a43388e3e08ffc263df47"}'></script>
+    <!-- End Cloudflare Web Analytics -->
     <title>WT Data Project</title>
   </head>
   <body>
